--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
-    <!-- <script src="main.js"></script> -->
+    <script src="js/main.js"></script>
 </head>
 <body>
     <p>
@@ -19,6 +19,7 @@
 
     <script >
         // allows the button to display an alert
+
         function myFunction() {
             alert("Hello World");
         }
@@ -29,9 +30,6 @@
 
     <script >
         console.log('zainab is here');
-    </script>
-
-    <script src="js/alert.js">
     </script>
 </body>
 </html>
